[build-system]
# requires = ["setuptools"]
requires = ["setuptools == 76.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
exclude = ["bpm/ftpsclient"]

[tool.setuptools.package-data]
"bpm" = ["*.json"]

[project]
name = "bambu-printer-manager"
version = "0.4.5"
authors = [
  { name="Shell M. Shrader", email="shell@shellware.com" },
]
description = "A pure python library for managing Bambu Labs printers"
readme = "README.md"
requires-python = ">=3.12.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Freely Distributable",
    "Operating System :: OS Independent",
]
dependencies = [
  "webcolors",
  "paho-mqtt",
  "mkdocstrings[python]>=0.18",
]

[project.urls]
Homepage = "https://github.com/synman/bambu-printer-manager"
Documentation = "https://synman.github.io/bambu-printer-manager/"
Issues = "https://github.com/synman/bambu-printer-manager/issues"

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true