[build-system]
# requires = ["setuptools"]
requires = ["setuptools == 76.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
exclude = ["bpm/ftpsclient"]

[tool.setuptools.package-data]
"bpm" = ["*.json"]

[project]
name = "bambu-printer-manager"
version = "0.5.4rc1"
authors = [
  { name="Shell M. Shrader", email="shell@shellware.com" },
]
description = "A pure python library for managing Bambu Labs printers"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Freely Distributable",
    "Operating System :: OS Independent",
]
dependencies = [
  "webcolors",
  "paho-mqtt",
  "typing-extensions ; python_version<'3.12'",
]

[project.optional-dependencies]
develop = [
  "pre-commit",
]
docs = [
  "mkdocstrings[python]>=0.18",
]

[project.urls]
Homepage = "https://github.com/synman/bambu-printer-manager"
Documentation = "https://synman.github.io/bambu-printer-manager/"
Issues = "https://github.com/synman/bambu-printer-manager/issues"

[tool.ruff]
exclude = [
    # repo specific
    "src/bpm/ftpsclient",

    # standard stuff
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 90
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
select = ["B", "C", "E", "F", "I", "W", "B9"]
ignore = [
    "E501",  # line too long
    "E701",  #
    "C901",  # method complexity
]
fixable = ["I", "C4", "E"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = [
    "bmp",
]
